--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Lathashree's blog
+subtitle: This is where I talk about my life and the things I do
 ---
