--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Lathashree's blog
+title: Hello there 👋
 subtitle: This is where I talk about my life and the things I do
 ---
