--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Welcome 🙏
-subtitle: This is where I talk about my life and the things I do
+subtitle: This is where I talk about my life and the cool things I do
 ---
